fixed -- was too small

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,6 @@ a {
   font-size: 36px;
 }
 .logo {
-  max-width: 100px;
+  max-width: 400px;
   margin-bottom: 20px;
 }
